@@ -161,7 +161,7 @@ class Site(models.Model):
             result = [
                 (site.id, site.root_page.url_path, site.root_url)
                 for site in Site.objects.select_related('root_page').order_by(
-                    '-root_page__url_path', 'is_default_site', 'hostname')
+                    '-root_page__url_path', '-is_default_site', 'hostname')
             ]
             cache.set('wagtail_site_root_paths', result, 3600)
 
