@@ -19,6 +19,7 @@ Changelog
  * Fix: Handle all exceptions from `Image.get_file_size` (Andrew Plummer)
  * Fix: Fix display of breadcrumbs in ModelAdmin (LB (Ben Johnston))
  * Fix: Remove duplicate border radius of avatars (Benjamin Thurm)
+ * Fix: Site.get_site_root_paths() preferring other sites over the default when some sites share the same root_page (Andy Babic)
 
 
 2.1 (22.05.2018)
